--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,12 +13,15 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">font: 24pt &quot;STHeiti&quot;;</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>180</y>
+      <x>190</x>
+      <y>150</y>
       <width>321</width>
       <height>61</height>
      </rect>
@@ -34,7 +37,7 @@
      <x>0</x>
      <y>0</y>
      <width>703</width>
-     <height>25</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
